--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.22",
+    "lucide-react": "^0.545.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
